Fix in image visibility and adding react icons.

--- a/ishaer-app/src/App.scss
+++ b/ishaer-app/src/App.scss
@@ -112,5 +112,8 @@
   button {
     margin-left: 10px;
     border-radius: 5px !important;
+    svg {
+      margin-right: 5px;
+    }
   }
 }
